[project]
dependencies = []
requires-python = ">=3.8,<4.0"

[tool.pdm.dev-dependencies]
dev = [
    "-e datajunction-server @ file:///${PROJECT_ROOT}/datajunction-server",
    "-e datajunction-query @ file:///${PROJECT_ROOT}/datajunction-query",
    "-e datajunction-reflection @ file:///${PROJECT_ROOT}/datajunction-reflection",
]
