[project]
name = "datajunction"
dynamic = ["version"]
dependencies = []
requires-python = ">=3.10,<4.0"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.2.2",
    "pylint>=2.17.3",
    "-e datajunction-server @ file:///${PROJECT_ROOT}/datajunction-server",
    "-e datajunction-query @ file:///${PROJECT_ROOT}/datajunction-query",
    "-e datajunction-reflection @ file:///${PROJECT_ROOT}/datajunction-reflection",
]
