[project]
name = "datajunction-monorepo"
version = "0.0.1"
dependencies = []
requires-python = ">=3.10,<4.0"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.uv.workspace]
members = [
    "datajunction-server",
    "datajunction-query",
    "datajunction-clients/python",
]

[dependency-groups]
dev = [
    "pre-commit>=3.2.2",
    "pylint>=2.17.3",
]
