[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["djqs"]

[tool.pdm.build]
includes = ["djqs"]

[project]
name = "datajunction-query"
dynamic = ["version"]
description = "OSS Implementation of a DataJunction Query Service"
authors = [
    {name = "DataJunction Authors", email = "roberto@dealmeida.net"},
]
dependencies = [
    "importlib-metadata",
    "SQLAlchemy-Utils>=0.37.7",
    "accept-types==0.4.1",
    "cachelib>=0.4.0",
    "duckdb==0.8.1",
    "duckdb-engine",
    "fastapi>=0.79.0",
    "msgpack>=1.0.3",
    "python-dotenv==0.19.2",
    "requests<=2.29.0,>=2.28.2",
    "rich>=10.16.2",
    "sqlalchemy<2.0.0,>=1.4.41",
    "sqlmodel<1.0.0,>=0.0.8",
    "sqlparse<1.0.0,>=0.4.3",
    "toml>=0.10.2",
    "snowflake-connector-python>=3.3.1",
    "pyyaml>=6.0.1",
]
requires-python = ">=3.8,<4.0"
readme = "README.rst"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
uvicorn = [
    "uvicorn[standard]>=0.21.1",
]

[tool.hatch.version]
path = "djqs/__about__.py"

[project.urls]
repository = "https://github.com/DataJunction/dj"

[tool.pdm.dev-dependencies]
test = [
    "alembic>=1.7.7",
    "codespell>=2.1.0",
    "freezegun>=1.1.0",
    "pre-commit>=3.2.2",
    "pyfakefs>=4.5.1",
    "pylint>=2.15.3",
    "pytest-asyncio==0.15.1",
    "pytest-cov>=2.12.1",
    "pytest-integration==0.2.2",
    "pytest-mock>=3.6.1",
    "pytest>=6.2.5",
    "requests-mock>=1.9.3",
    "setuptools>=49.6.0",
    "pip-tools>=6.4.0",
    "pydruid>=0.6.4",
    "typing-extensions>=4.3.0",
    "httpx>=0.24.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.coverage.run]
source = ['djqs/']

[tool.isort]
src_paths = ["djqs/", "tests/"]
profile = 'black'
