[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.10,<4.0"
name = "datajunction-query"
dynamic = ["version"]
description = "OSS Implementation of a DataJunction Query Service"
authors = [
    {name = "DataJunction Authors", email = "roberto@dealmeida.net"},
]
dependencies = [
    "importlib-metadata",
    "accept-types==0.4.1",
    "cachelib>=0.4.0",
    "duckdb==0.8.1",
    "duckdb-engine",
    "fastapi>=0.79.0",
    "msgpack>=1.0.3",
    "python-dotenv==0.19.2",
    "requests<=2.29.0,>=2.28.2",
    "rich>=10.16.2",
    "toml>=0.10.2",
    "snowflake-connector-python>=3.3.1",
    "pyyaml>=6.0.1",
    "trino>=0.324.0",
    "psycopg[async,pool]>=3.2.1",
    "sqlalchemy>=2.0.34",
    "pytest-asyncio>=0.24.0",
    "pytest-integration>=0.2.3",
    "tenacity>=9.0.0",
]
readme = "README.rst"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["djqs"]

[tool.pdm]
[tool.pdm.build]
includes = ["dj"]

[tool.pdm.dev-dependencies]
test = [
    "alembic>=1.7.7",
    "codespell>=2.1.0",
    "freezegun>=1.1.0",
    "pre-commit>=3.2.2",
    "pyfakefs>=4.5.1",
    "pylint>=2.15.3",
    "pytest-cov>=2.12.1",
    "pytest-mock>=3.6.1",
    "pytest>=6.2.5",
    "requests-mock>=1.9.3",
    "setuptools>=49.6.0",
    "pip-tools>=6.4.0",
    "pydruid>=0.6.4",
    "typing-extensions>=4.3.0",
    "httpx>=0.24.1",
    "psycopg[async,pool]>=3.2.1",
    "testcontainers[postgres]>=4.8.1",
    "types-toml",
]

[tool.pdm.scripts]
pytest = { cmd = "pytest", env = { "CONFIGURATION_FILE" = "./tests/config.djqs.yml", "INDEX" = "postgresql://dj:dj@localhost:4321/dj", "DEFAULT_ENGINE" = "duckdb_inmemory", "DEFAULT_ENGINE_VERSION" = "0.7.1" } }

[project.optional-dependencies]
uvicorn = [
    "uvicorn[standard]>=0.21.1",
]

[tool.hatch.version]
path = "djqs/__about__.py"

[project.urls]
repository = "https://github.com/DataJunction/dj"

[tool.hatch.metadata]
allow-direct-references = true

[tool.coverage.run]
source = ['djqs/']
omit = [
    "djqs/config.py",
    "djqs/exceptions.py"
]

[tool.ruff.lint]
ignore = ["F811"]
