[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datajunction_server"]


[tool.pdm]
[tool.pdm.build]
includes = ["dj"]

[tool.pdm.dev-dependencies]
test = [
    "codespell>=2.2.4",
    "freezegun>=1.2.2",
    "pre-commit>=3.2.2",
    "pylint>=3.0.3",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-integration>=0.2.2",
    "pytest-mock>=3.10.0",
    "pytest>=7.3.0",
    "requests-mock>=1.10.0",
    "typing-extensions>=4.5.0",
    "pytest-xdist>=3.3.0",
    "duckdb==0.8.1",
    "testcontainers>=3.7.1",
    "httpx>=0.27.0",
    "greenlet>=3.0.3",
    "gevent>=24.2.1",
]

[[tool.pdm.autoexport]]
filename = "requirements/docker.txt"
groups = ["default", "uvicorn", "transpilation"]
without-hashes = true

[[tool.pdm.autoexport]]
filename = "requirements/test.txt"
groups = ["default", "test"]
without-hashes = true

[project]
name = "datajunction-server"
dynamic = ["version"]
description = "DataJunction server library for running to a DataJunction server"
authors = [
    {name = "DataJunction Authors", email = "yian.shang@gmail.com"},
]
dependencies = [
    "alembic>=1.10.3",
    "SQLAlchemy-Utils<1.0.0,>=0.40.0",
    "accept-types<1.0.0,>=0.4.1",
    "antlr4-python3-runtime==4.13.1",
    "asciidag<1.0.0,>=0.2.0",
    "cachelib<1.0.0,>=0.10.2",
    "celery<6.0.0,>=5.2.7",
    "google-api-python-client>=2.95.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    "fastapi>=0.110.0",
    "msgpack<2.0.0,>=1.0.5",
    "opentelemetry-instrumentation-fastapi==0.38b0",
    "python-dotenv<1.0.0,>=0.19.0",
    "redis<5.0.0,>=4.5.4",
    "requests<=2.29.0,>=2.28.2",
    "rich<14.0.0,>=13.3.3",
    "sqlalchemy>=2",
    "sqlparse<1.0.0,>=0.4.3",
    "sse-starlette>=1.6.0",
    "yarl<2.0.0,>=1.8.2",
    "python-multipart>=0.0.6",
    "passlib>=1.7.4",
    "python-jose>=3.3.0",
    "cryptography>=41.0.3",
    "bcrypt>=4.0.1",
    "line-profiler>=4.0.3",
    "cachetools>=5.3.1",
    "types-cachetools>=5.3.0.6",
    "strawberry-graphql>=0.204.0",
    "fastapi-cache2>=0.2.1",
    "psycopg>=3.1.16",
    "pydantic<2",
    "aiosqlite>=0.20.0",
    "pytest-asyncio==0.21.2",
    "nbformat>=5.10.4",
    "jinja2>=3.1.4",
]
requires-python = ">=3.8,<4.0"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
uvicorn = [
    "uvicorn[standard]>=0.21.1",
]
transpilation = [
    "sqlglot>=18.0.1",
]

[project.entry-points.'superset.db_engine_specs']
dj = 'datajunction_server.superset:DJEngineSpec'

[tool.hatch.version]
path = "datajunction_server/__about__.py"

[project.urls]
repository = "https://github.com/DataJunction/dj"

[tool.coverage.run]
source = ['datajunction_server/']
concurrency = ["thread,greenlet"]

[tool.isort]
src_paths = ["datajunction_server/", "tests/"]
profile = 'black'

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]
