[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pdm.build]
includes = ["datajunction"]

[project]
name = "datajunction"
dynamic = ["version"]
description = "DataJunction client library for connecting to a DataJunction server"
authors = [
    {name = "DataJunction Authors", email = "yian.shang@gmail.com"},
]
dependencies = [
    "requests<3.0.0,>=2.28.2",
    "pydantic>=1.10.7",
]
requires-python = ">=3.8,<4.0"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.version]
path = "datajunction/__about__.py"

[project.urls]
repository = "https://github.com/DataJunction/dj"

[tool.pdm.dev-dependencies]
test = [
    "pre-commit>=3.2.2",
    "pylint>=2.17.3",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-integration>=0.2.3",
    "pytest-mock>=3.10.0",
    "pytest>=7.3.1",
    "responses>=0.23.1",
    "fastapi>=0.79.0",
    "dj @ {root:uri}/../..",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.coverage.run]
source = ['datajunction/']

[tool.isort]
src_paths = ["datajunction/", "tests/"]
profile = 'black'
