[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datajunction"
dynamic = ["version"]
description = "DataJunction client library for connecting to a DataJunction server"
authors = [
    {name = "DataJunction Authors", email = "yian.shang@gmail.com"},
]
dependencies = [
    "requests<3.0.0,>=2.28.2",
    "alive-progress>=3.1.2",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.27.0",
]
requires-python = ">=3.8,<4.0"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0.2"]

[tool.hatch.version]
path = "datajunction/__about__.py"

[project.scripts]
dj = "datajunction.cli:main"

[tool.pdm]
[tool.pdm.build]
includes = ["datajunction"]

[tool.pdm.dev-dependencies]
test = [
    "pre-commit>=3.2.2",
    "pylint>=2.17.3",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-integration>=0.2.3",
    "pytest-mock>=3.10.0",
    "pytest>=7.3.1",
    "responses>=0.23.1",
    "fastapi>=0.79.0",
    "urllib3<2",
    "datajunction-server @ {root:uri}/../../datajunction-server",
    "namesgenerator==0.3",
    "testcontainers>=3.7.1",
    "greenlet>=3.0.3",
    "jinja2>=3.1.4",
    "nbformat>=5.10.4",
    "sqlglot>=18.0.1",
]

[project.urls]
repository = "https://github.com/DataJunction/dj"

[tool.hatch.metadata]
allow-direct-references = true

[tool.coverage.run]
source = ['datajunction/']

[tool.isort]
src_paths = ["datajunction/", "tests/"]
profile = 'black'
